--- a/views/forums.ejs
+++ b/views/forums.ejs
@@ -37,6 +37,8 @@ for(i=0;i<arrays.length;i++){
 <br></br>
 <br></br>
 <br></br>
+<input type = "radio" name = "check" value = "table" /> Opción 1: Visualizar tabla
+<input type = "radio" name = "check" value = "excel" /> Opción 2: Descargar excel
 <input type="submit" value="Mostrar" padding= 200px> 
 </div></div>
 </form>
