--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -5,7 +5,10 @@
   <h1>RapidMiner Server</h1>
   <header>
   <% include ./partials/header %>
-</header>
+  <form method='GET' action='/logout'>
+  <input type="submit" value="LogOut" padding= 200px> 
+  </form>
+  </header>
   <head>
     <title>RapidMiner Server</title>
   </head>
