--- a/views/forums.ejs
+++ b/views/forums.ejs
@@ -5,7 +5,10 @@
   <h1>RapidMiner Server</h1>
   <header>
   <% include ./partials/header %>
-</header>
+  <form method='GET' action='/logout'>
+  <input type="submit" value="LogOut" padding= 200px> 
+  </form>
+  </header>
   <head>
     <title>RapidMiner Server</title>
   </head>
@@ -38,6 +41,8 @@ for(i=0;i<arrays.length;i++){
 </script>
 <br></br>
 <br></br>
+  <p>Seleccione la wiki:</p>
+<br></br>
 <select id="wikis" name="wikis"></select>
 <script type="text/javascript">
 var arraysW = <%- JSON.stringify(arrayW) %>;
@@ -49,6 +54,8 @@ for(i=0;i<arraysW.length;i++){
 }
 </script>
 <br></br>
+<br></br>
+  <p>Seleccione la práctica:</p>
 <br></br>
 <select id="assigns" name="assigns"></select>
 <script type="text/javascript">
